--- a/content/Task.html
+++ b/content/Task.html
@@ -139,26 +139,88 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1-1 << <a href='HW1-1.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3<br /><h1>HW2</h1>
-<p>HW2 佔學期成績 20%</p>
-<p><span style="background-color: #ffff99;">HW2 必須在 2021.12.22 22:00 之前完成.</span></p>
-<p><a href="https://github.com/mdecourse/cad2021/discussions/7">HW2 具體項目成果回報區</a>將於 2021.12.09 開啟, 於 <span style="background-color: #ff99cc;">2021.12.22 22:00 關閉.</span></p>
-<p>meArm 逆向運動學與網際參數式 CAD API 結合應用.</p>
-<p>請將 <a href="https://github.com/mdecourse/meArm">https://github.com/mdecourse/meArm</a> 中的 meArm Robot 逆向運動學程式, 改為 Lua 與 Python 程式, 使能套用至 HW1 所完成的 CoppeliaSim meArm 運動模擬場景. 並分別採 Lua, Legacy remote API 及 Bluezero remote API 逆向運動的方式進行控制.</p>
-<p>請利用 <a href="https://mde.tw/cad2021/content/Task%202.html">Task2</a> 中的 Solidworks, Inventor 與 NX API 程式控制 meArm Robot 零組件尺寸, 說明並討論如何透過網際程式控制 meArm Robot 的零件尺寸, 並結合上述逆向運動學程式庫, 使得自動化機電產品開發流程更容易滿足客製化需求.</p>
-<h4>參考:</h4>
-<p style="padding-left: 30px;"><a href="./../downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a></p>
-<p style="padding-left: 30px;"><a href="./../downloads/Robot Manipulator Control with Inverse Kinematics PD-Pseudoinverse Jacobian and Forward Kinematics Denavit Hartenberg.pdf">Robot Manipulator Control with Inverse Kinematics PD-Pseudoinverse Jacobian and Forward Kinematics Denavit Hartenber.pdf</a></p>
-<p style="padding-left: 30px;"><a href="./../downloads/KINEMATIC ANALYSIS FOR ROBOT ARM.pdf">KINEMATIC ANALYSIS FOR ROBOT ARM.pdf</a></p>
-<p style="padding-left: 30px;"><a href="https://codebender.cc/user/MeArm">https://codebender.cc/user/MeArm</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/meArmPi">https://github.com/mdecourse/meArmPi</a></p>
-<p style="padding-left: 60px;"><a href="./../downloads/MeArmPiTechnicalOverviewV0-3DRAFT.pdf">/downloads/MeArmPiTechnicalOverviewV0-3DRAFT.pdf</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/me-arm-ik">https://github.com/mdecourse/me-arm-ik</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/mearm_model">https://github.com/mdecourse/mearm_model</a></p>
-<p style="padding-left: 30px;"><a href="https://courses.ece.cornell.edu/ece5990/ECE5725_Fall2016_Projects/pas324_ml634/index.html">https://courses.ece.cornell.edu/ece5990/ECE5725_Fall2016_Projects/pas324_ml634/index.html</a></p>
-<p style="padding-left: 60px;"><a href="https://github.com/mdecourse/InefficientSkittleSorter">https://github.com/mdecourse/InefficientSkittleSorter</a></p>
-<p style="padding-left: 30px;"><a href="https://mearm.com">https://mearm.com</a></p>
-<br />HW1-1 << <a href='HW1-1.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>Task</h1>
+<div class="line number1 index0 alt2"><code class="py plain"></code></div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">data = open("cad2021_2b_w2_list.txt").readlines()
+data = data[1:]
+for i in range(len(data)):
+    num_github = data[i]
+    num = num_github.split("\t")[0]
+    account = num_github.split("\t")[1]
+    if account == "":
+        account = num
+    print("&lt;p&gt;&lt;span&gt;&lt;a href='https://github.com/"+ str(account) +"/cad2021_hw'&gt; "+ str(num)+"&lt;/a&gt; "+ "&lt;a href='https://" +str(account) + ".github.io/cad2021_hw'&gt;"+ str(num) + "&lt;/a&gt;&lt;/span&gt;&lt;/p&gt;")</pre>
+<p></p>
+<p>cad2021 2b各學員的倉儲與網站</p>
+<p><a href="https://github.com/40723126/cad2021_hw"></a></p>
+<p><span><a href="https://github.com/40723126/cad2021_hw">40723126</a> <a href="https://40723126.github.io/cad2021_hw">40723126</a></span></p>
+<p><span><a href="https://github.com/40723135/cad2021_hw">40723135</a> <a href="https://40723135.github.io/cad2021_hw">40723135</a></span></p>
+<p><span><a href="https://github.com/40723217/cad2021_hw">40723217</a> <a href="https://40723217.github.io/cad2021_hw">40723217</a></span></p>
+<p><span><a href="https://github.com/40732331/cad2021_hw">40732331</a> <a href="https://40732331.github.io/cad2021_hw">40732331</a></span></p>
+<p><span><a href="https://github.com/40823114/cad2021_hw">40823114</a> <a href="https://40823114.github.io/cad2021_hw">40823114</a></span></p>
+<p><span><a href="https://github.com/40823115/cad2021_hw">40823115</a> <a href="https://40823115.github.io/cad2021_hw">40823115</a></span></p>
+<p><span><a href="https://github.com/pyc40823117/cad2021_hw">40823117</a> <a href="https://pyc40823117.github.io/cad2021_hw">40823117</a></span></p>
+<p><span><a href="https://github.com/40823119/cad2021_hw">40823119</a> <a href="https://40823119.github.io/cad2021_hw">40823119</a></span></p>
+<p><span><a href="https://github.com/40823122/cad2021_hw">40823122</a> <a href="https://40823122.github.io/cad2021_hw">40823122</a></span></p>
+<p><span><a href="https://github.com/40823127/cad2021_hw">40823127</a> <a href="https://40823127.github.io/cad2021_hw">40823127</a></span></p>
+<p><span><a href="https://github.com/40823146/cad2021_hw">40823146</a> <a href="https://40823146.github.io/cad2021_hw">40823146</a></span></p>
+<p><span><a href="https://github.com/40823148/cad2021_hw">40823148</a> <a href="https://40823148.github.io/cad2021_hw">40823148</a></span></p>
+<p><span><a href="https://github.com/40823215/cad2021_hw">40823215</a> <a href="https://40823215.github.io/cad2021_hw">40823215</a></span></p>
+<p><span><a href="https://github.com/40871106/cad2021_hw">40871106</a> <a href="https://40871106.github.io/cad2021_hw">40871106</a></span></p>
+<p><span><a href="https://github.com/40923201/cad2021_hw">40923201</a> <a href="https://40923201.github.io/cad2021_hw">40923201</a></span></p>
+<p><span><a href="https://github.com/youshin40923203/cad2021_hw">40923203</a> <a href="https://youshin40923203.github.io/cad2021_hw">40923203</a></span></p>
+<p><span><a href="https://github.com/40923204/cad2021_hw">40923204</a> <a href="https://40923204.github.io/cad2021_hw">40923204</a></span></p>
+<p><span><a href="https://github.com/40923205/cad2021_hw">40923205</a> <a href="https://40923205.github.io/cad2021_hw">40923205</a></span></p>
+<p><span><a href="https://github.com/40923206-1/cad2021_hw">40923206</a> <a href="https://40923206-1.github.io/cad2021_hw">40923206</a></span></p>
+<p><span><a href="https://github.com/40923207/cad2021_hw">40923207</a> <a href="https://40923207.github.io/cad2021_hw">40923207</a></span></p>
+<p><span><a href="https://github.com/nfu40923208/cad2021_hw">40923208</a> <a href="https://nfu40923208.github.io/cad2021_hw">40923208</a></span></p>
+<p><span><a href="https://github.com/nfu40923209/cad2021_hw">40923209</a> <a href="https://nfu40923209.github.io/cad2021_hw">40923209</a></span></p>
+<p><span><a href="https://github.com/40923210/cad2021_hw">40923210</a> <a href="https://40923210.github.io/cad2021_hw">40923210</a></span></p>
+<p><span><a href="https://github.com/a40923211/cad2021_hw">40923211</a> <a href="https://a40923211.github.io/cad2021_hw">40923211</a></span></p>
+<p><span><a href="https://github.com/40923212/cad2021_hw">40923212</a> <a href="https://40923212.github.io/cad2021_hw">40923212</a></span></p>
+<p><span><a href="https://github.com/40923213/cad2021_hw">40923213</a> <a href="https://40923213.github.io/cad2021_hw">40923213</a></span></p>
+<p><span><a href="https://github.com/40923214/cad2021_hw">40923214</a> <a href="https://40923214.github.io/cad2021_hw">40923214</a></span></p>
+<p><span><a href="https://github.com/40923216/cad2021_hw">40923216</a> <a href="https://40923216.github.io/cad2021_hw">40923216</a></span></p>
+<p><span><a href="https://github.com/40923217/cad2021_hw">40923217</a> <a href="https://40923217.github.io/cad2021_hw">40923217</a></span></p>
+<p><span><a href="https://github.com/40923218/cad2021_hw">40923218</a> <a href="https://40923218.github.io/cad2021_hw">40923218</a></span></p>
+<p><span><a href="https://github.com/nfu40923219/cad2021_hw">40923219</a> <a href="https://nfu40923219.github.io/cad2021_hw">40923219</a></span></p>
+<p><span><a href="https://github.com/40923220/cad2021_hw">40923220</a> <a href="https://40923220.github.io/cad2021_hw">40923220</a></span></p>
+<p><span><a href="https://github.com/40923221/cad2021_hw">40923221</a> <a href="https://40923221.github.io/cad2021_hw">40923221</a></span></p>
+<p><span><a href="https://github.com/40923223/cad2021_hw">40923223</a> <a href="https://40923223.github.io/cad2021_hw">40923223</a></span></p>
+<p><span><a href="https://github.com/s40923224/cad2021_hw">40923224</a> <a href="https://s40923224.github.io/cad2021_hw">40923224</a></span></p>
+<p><span><a href="https://github.com/40923225/cad2021_hw">40923225</a> <a href="https://40923225.github.io/cad2021_hw">40923225</a></span></p>
+<p><span><a href="https://github.com/40923226/cad2021_hw">40923226</a> <a href="https://40923226.github.io/cad2021_hw">40923226</a></span></p>
+<p><span><a href="https://github.com/40923227/cad2021_hw">40923227</a> <a href="https://40923227.github.io/cad2021_hw">40923227</a></span></p>
+<p><span><a href="https://github.com/40923228/cad2021_hw">40923228</a> <a href="https://40923228.github.io/cad2021_hw">40923228</a></span></p>
+<p><span><a href="https://github.com/40923229/cad2021_hw">40923229</a> <a href="https://40923229.github.io/cad2021_hw">40923229</a></span></p>
+<p><span><a href="https://github.com/40923230/cad2021_hw">40923230</a> <a href="https://40923230.github.io/cad2021_hw">40923230</a></span></p>
+<p><span><a href="https://github.com/40923231/cad2021_hw">40923231</a> <a href="https://40923231.github.io/cad2021_hw">40923231</a></span></p>
+<p><span><a href="https://github.com/40923232/cad2021_hw">40923232</a> <a href="https://40923232.github.io/cad2021_hw">40923232</a></span></p>
+<p><span><a href="https://github.com/40923233/cad2021_hw">40923233</a> <a href="https://40923233.github.io/cad2021_hw">40923233</a></span></p>
+<p><span><a href="https://github.com/40923234/cad2021_hw">40923234</a> <a href="https://40923234.github.io/cad2021_hw">40923234</a></span></p>
+<p><span><a href="https://github.com/40923235/cad2021_hw">40923235</a> <a href="https://40923235.github.io/cad2021_hw">40923235</a></span></p>
+<p><span><a href="https://github.com/40923236/cad2021_hw">40923236</a> <a href="https://40923236.github.io/cad2021_hw">40923236</a></span></p>
+<p><span><a href="https://github.com/40923237/cad2021_hw">40923237</a> <a href="https://40923237.github.io/cad2021_hw">40923237</a></span></p>
+<p><span><a href="https://github.com/40923238/cad2021_hw">40923238</a> <a href="https://40923238.github.io/cad2021_hw">40923238</a></span></p>
+<p><span><a href="https://github.com/40923239/cad2021_hw">40923239</a> <a href="https://40923239.github.io/cad2021_hw">40923239</a></span></p>
+<p><span><a href="https://github.com/40923240/cad2021_hw">40923240</a> <a href="https://40923240.github.io/cad2021_hw">40923240</a></span></p>
+<p><span><a href="https://github.com/40923241/cad2021_hw">40923241</a> <a href="https://40923241.github.io/cad2021_hw">40923241</a></span></p>
+<p><span><a href="https://github.com/40923242/cad2021_hw">40923242</a> <a href="https://40923242.github.io/cad2021_hw">40923242</a></span></p>
+<p><span><a href="https://github.com/40923243/cad2021_hw">40923243</a> <a href="https://40923243.github.io/cad2021_hw">40923243</a></span></p>
+<p><span><a href="https://github.com/40923244/cad2021_hw">40923244</a> <a href="https://40923244.github.io/cad2021_hw">40923244</a></span></p>
+<p><span><a href="https://github.com/40923245-1/cad2021_hw">40923245</a> <a href="https://40923245-1.github.io/cad2021_hw">40923245</a></span></p>
+<p><span><a href="https://github.com/40923246/cad2021_hw">40923246</a> <a href="https://40923246.github.io/cad2021_hw">40923246</a></span></p>
+<p><span><a href="https://github.com/40923247/cad2021_hw">40923247</a> <a href="https://40923247.github.io/cad2021_hw">40923247</a></span></p>
+<p><span><a href="https://github.com/40923248/cad2021_hw">40923248</a> <a href="https://40923248.github.io/cad2021_hw">40923248</a></span></p>
+<p><span><a href="https://github.com/40923249-1/cad2021_hw">40923249</a> <a href="https://40923249-1.github.io/cad2021_hw">40923249</a></span></p>
+<p><span><a href="https://github.com/40923250/cad2021_hw">40923250</a> <a href="https://40923250.github.io/cad2021_hw">40923250</a></span></p>
+<p><span><a href="https://github.com/40923251/cad2021_hw">40923251</a> <a href="https://40923251.github.io/cad2021_hw">40923251</a></span></p>
+<p><span><a href="https://github.com/40923252/cad2021_hw">40923252</a> <a href="https://40923252.github.io/cad2021_hw">40923252</a></span></p>
+<p><span><a href="https://github.com/40923253/cad2021_hw">40923253</a> <a href="https://40923253.github.io/cad2021_hw">40923253</a></span></p>
+<p><span><a href="https://github.com/40971220/cad2021_hw">40971220</a> <a href="https://40971220.github.io/cad2021_hw">40971220</a></span></p>
+<p><span><a href="https://github.com/40971227/cad2021_hw">40971227</a> <a href="https://40971227.github.io/cad2021_hw">40971227</a></span></p>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
