--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,9 +1,9 @@
 <h1>About</h1>
 <p>本學期的電腦輔助設計實習, 要求每一位學員根據本 HW template 的格式建立個人的作業倉儲與網頁.</p>
 <hr/>
-<p>你的學號</p>
-<p>網站倉儲: <a href="https://github.com/mdecourse/cad2021_hw">https://github.com/mdecourse/cad2021_hw</a></p>
-<p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
+<p>40871106</p>
+<p>網站倉儲: <a href="https://github.com/40871106/cad2021_hw">https://github.com/40871106/cad2021_hw</a></p>
+<p>網站連結: <a href="https://40871106.github.io/cad2021_hw/content/index.html">https://40871106.github.io/cad2021_hw/content/index.html</a></p>
 <p>其他與作者或作業相關資料說明或介紹</p>
 <h1>Task</h1>
 <div class="line number1 index0 alt2"><code class="py plain"></code></div>
