--- a/content/HW2.html
+++ b/content/HW2.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Task.html'>Task</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='任務.html'>任務</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -147,17 +147,17 @@ img.add_border {
 <p>請將 <a href="https://github.com/mdecourse/meArm">https://github.com/mdecourse/meArm</a> 中的 meArm Robot 逆向運動學程式, 改為 Lua 與 Python 程式, 使能套用至 HW1 所完成的 CoppeliaSim meArm 運動模擬場景. 並分別採 Lua, Legacy remote API 及 Bluezero remote API 逆向運動的方式進行控制.</p>
 <p>請利用 <a href="https://mde.tw/cad2021/content/Task%202.html">Task2</a> 中的 Solidworks, Inventor 與 NX API 程式控制 meArm Robot 零組件尺寸, 說明並討論如何透過網際程式控制 meArm Robot 的零件尺寸, 並結合上述逆向運動學程式庫, 使得自動化機電產品開發流程更容易滿足客製化需求.</p>
 <h4>參考:</h4>
-<p style="padding-left: 30px;"><a href="./../downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a></p>
-<p style="padding-left: 30px;"><a href="./../downloads/Robot Manipulator Control with Inverse Kinematics PD-Pseudoinverse Jacobian and Forward Kinematics Denavit Hartenberg.pdf">Robot Manipulator Control with Inverse Kinematics PD-Pseudoinverse Jacobian and Forward Kinematics Denavit Hartenber.pdf</a></p>
-<p style="padding-left: 30px;"><a href="./../downloads/KINEMATIC ANALYSIS FOR ROBOT ARM.pdf">KINEMATIC ANALYSIS FOR ROBOT ARM.pdf</a></p>
-<p style="padding-left: 30px;"><a href="https://codebender.cc/user/MeArm">https://codebender.cc/user/MeArm</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/meArmPi">https://github.com/mdecourse/meArmPi</a></p>
-<p style="padding-left: 60px;"><a href="./../downloads/MeArmPiTechnicalOverviewV0-3DRAFT.pdf">/downloads/MeArmPiTechnicalOverviewV0-3DRAFT.pdf</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/me-arm-ik">https://github.com/mdecourse/me-arm-ik</a></p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/mearm_model">https://github.com/mdecourse/mearm_model</a></p>
-<p style="padding-left: 30px;"><a href="https://courses.ece.cornell.edu/ece5990/ECE5725_Fall2016_Projects/pas324_ml634/index.html">https://courses.ece.cornell.edu/ece5990/ECE5725_Fall2016_Projects/pas324_ml634/index.html</a></p>
-<p style="padding-left: 60px;"><a href="https://github.com/mdecourse/InefficientSkittleSorter">https://github.com/mdecourse/InefficientSkittleSorter</a></p>
-<p style="padding-left: 30px;"><a href="https://mearm.com">https://mearm.com</a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">2016_製造微型機器人的增材製造工藝 - 計算模型和實驗結果.pdf</span></span></a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/Robot Manipulator Control with Inverse Kinematics PD-Pseudoinverse Jacobian and Forward Kinematics Denavit Hartenberg.pdf"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">具有逆向運動學 PD-偽逆雅可比行列式和正向運動學的機器人機械手控制 Denavit Hartenber.pdf</span></span></a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/KINEMATIC ANALYSIS FOR ROBOT ARM.pdf"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">機器人手臂運動學分析.pdf</span></span></a></p>
+<p style="padding-left: 30px;"><a href="https://codebender.cc/user/MeArm"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://codebender.cc/user/MeArm</span></span></a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/meArmPi"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecourse/meArmPi</span></span></a></p>
+<p style="padding-left: 60px;"><a href="./../downloads/MeArmPiTechnicalOverviewV0-3DRAFT.pdf"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">/downloads/MeArmPiTechnicalOverviewV0-3DRAFT.pdf</span></span></a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/me-arm-ik"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecourse/me-arm-ik</span></span></a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/mdecourse/mearm_model"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecourse/mearm_model</span></span></a></p>
+<p style="padding-left: 30px;"><a href="https://courses.ece.cornell.edu/ece5990/ECE5725_Fall2016_Projects/pas324_ml634/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://courses.ece.cornell.edu/ece5990/ECE5725_Fall2016_Projects/pas324_ml634/index.html</span></span></a></p>
+<p style="padding-left: 60px;"><a href="https://github.com/mdecourse/InefficientSkittleSorter"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecourse/InefficientSkittleSorter</span></span></a></p>
+<p style="padding-left: 30px;"><a href="https://mearm.com"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://mearm.com</span></span></a></p>
 <br />HW1-1 << <a href='HW1-1.html'>Previous</a> <a href='HW3.html'>Next</a> >> HW3</div>
         
     <!-- footer -->
