--- a/content/about.html
+++ b/content/about.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='任務.html'>任務</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,14 +139,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='任務.html'>Next</a> >> 任務<br /><h1>關於</h1>
-<p>本學期的電腦輔助設計實習, 要求每一位學員根據本 HW template 的格式建立個人的作業倉儲與網頁.</p>
+    <div id="tipue_search_content"> <a href='Task1.html'>Next</a> >> Task1<br /><h1>about</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">In this semester's computer-aided design internship, each student is required to create a personal homework warehouse and web page according to the format of this HW template.</span></span></p>
 <hr/>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40871106</span></span></p>
-<p>網站倉儲: <a href="https://github.com/40871106/cad2021_hw">https://github.com/40871106/cad2021_hw</a></p>
-<p>網站連結: <a href="https://40871106.github.io/cad2021_hw/content/index.html">https://40871106.github.io/cad2021_hw/content/index.html</a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40871106</span></span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website storage: </span></span><a href="https://github.com/40871106/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/40871106/cad2021_hw</span></span></a></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website link: </span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://40871106.github.io/cad2021_hw/content/index.html</span></span></a></p>
 <p></p>
-<br /> <a href='任務.html'>Next</a> >> 任務</div>
+<br /> <a href='Task1.html'>Next</a> >> Task1</div>
         
     <!-- footer -->
       <div class="container">
