--- a/content/Solvespace繪圖.html
+++ b/content/Solvespace繪圖.html
@@ -140,8 +140,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Solidworks操作流程 << <a href='Solidworks操作流程.html'>Previous</a> <a href='Solvespace安裝配置.html'>Next</a> >> Solvespace安裝配置<br /><h1>Solvespace繪圖</h1>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 緣起說明與介紹</p>
+<p><span style="color: #0000ff;">緣起:</span></p>
+<p><span style="color: #0000ff;"><span style="color: #000000;">2013 年在Libre Graphics World上發表了對開發人員的簡短評論和採訪。而這篇評論稱讚 SolveSpace的<span style="color: #ff0000;">可執行文件小、先進的約束求解器和輸出格式範圍</span>。同一篇評論指出了一些缺點，主要是它對<span style="color: #ff0000;">布爾值的緩慢和有限的處理以及缺乏原生 Linux 支持</span>。但是，此後增加了本地 Linux 支持。</span><br/></span></p>
+<p><span style="color: #0000ff;">介紹:</span></p>
+<p><span style="color: #000000;"><strong>-</strong>建模 3D 零件 – 使用拉伸、旋轉和布爾（並/差）操作進行繪製</span></p>
+<p><span style="color: #000000;"><br/><strong>-</strong>建模 2D 零件 – 將零件繪製為單個部分，並導出為DXF、PDF或SVG；使用 3D 裝配驗證配合</span></p>
+<p><span style="color: #000000;"> 準備CAM數據 – 為水刀機或激光切割機導出 2D 矢量藝術；或生成 STEP 或STL，用於導入第三方</span></p>
+<p><span style="color: #000000;"> CAM 軟件<br/><strong>-</strong>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節<br/><strong>-</strong>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></p>
+<p></p>
 <br />Solidworks操作流程 << <a href='Solidworks操作流程.html'>Previous</a> <a href='Solvespace安裝配置.html'>Next</a> >> Solvespace安裝配置</div>
         
     <!-- footer -->
