--- a/content/Solidworks 繪圖.html
+++ b/content/Solidworks 繪圖.html
@@ -140,8 +140,17 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Solidworks2021 安裝配置.html'>Next</a> >> Solidworks2021 安裝配置<br /><h1>Solidworks 繪圖</h1>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 緣起說明與介紹</p>
+<p><span style="color: #0000ff;">緣起:</span></p>
+<p>1993年，創始人<a href="https://en.wikipedia.org/wiki/Jon_Hirschtick">Jon Hirschtick</a>招募了一組工程師團隊，其招募意旨是使3D CAD軟體更容易上手。Hirschtick從廣受好評的麻省理工學院二十一點隊的成員中籌得100萬美元，開始了他的新事業。該團隊的目標是構建一個基於<span style="color: #ff0000;">Windows平台</span>的易於使用且價格合理的軟體。這在當時真的是革命性的存在，當時所有其他流行的CAD系統都是在<span style="color: #ff0000;">Unix</span>上構建的。經過幾年的開發，最初發布的SolidWorks終於來了......</p>
+<p><span style="color: #0000ff;">介紹:</span></p>
+<p>最初代的版本1995年發行，其特色如下。</p>
+<p>1.與其他CAD系統的18,000美元相比，SolidWorks的售價僅為4,000美元。</p>
+<p><br/>2.該軟體更易於使用：與市場上其他CAD軟體相比，用戶只需3個月的使用經驗就可以輕鬆上手。</p>
+<p>  易上手的原因有很大一部分在於它採用了現代著名的Windows界面。</p>
+<p><br/>3.模型的可視化是前所未有的。在光線充足的陰影環境中的構建功能與傳統建模空間形成鮮明對比，</p>
+<p>  傳統建模空間僅顯示黑色背景下的線框。我們現在熟悉的類似FeatureManager用於顯示模型的構建歷      史。</p>
+<p>4.零件，組件和圖紙從一開始就可用。用戶無法在組件中應用配合，但仍可將組件放置到位。</p>
+<h4></h4>
 <br />HW1 << <a href='HW1.html'>Previous</a> <a href='Solidworks2021 安裝配置.html'>Next</a> >> Solidworks2021 安裝配置</div>
         
     <!-- footer -->
