--- a/content/Solvespace安裝配置.html
+++ b/content/Solvespace安裝配置.html
@@ -140,7 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Solvespace繪圖 << <a href='Solvespace繪圖.html'>Previous</a> <a href='Solvspace操作流程.html'>Next</a> >> Solvspace操作流程<br /><h1>Solvespace安裝配置</h1>
-<p>How to downlod Solvespace?</p>
+<p>How to download Solvespace?</p>
 <p>Teaching : <a href="https://youtu.be/WA30mcUVi6w">https://youtu.be/WA30mcUVi6w</a></p>
 <h4><span><span>求解空間：</span></span></h4>
 <p>至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用</p>
