W11 check video upload

--- a/content/Solidworks operation process.html
+++ b/content/Solidworks operation process.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,13 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solidworks 繪圖 << <a href='Solidworks 繪圖.html'>Previous</a> <a href='Solidworks操作流程.html'>Next</a> >> Solidworks操作流程<br /><h1>Solidworks2021 安裝配置</h1>
-<p>How to download Solidworks?</p>
-<p>Teaching:<a href="https://youtu.be/0cbrksHL9s8">https://youtu.be/0cbrksHL9s8</a></p>
+    <div id="tipue_search_content">Solidworks2021 installation configuration << <a href='Solidworks2021 installation configuration.html'>Previous</a> <a href='Solvespace drawing.html'>Next</a> >> Solvespace drawing<br /><h1>Solidworks operation process</h1>
+<p><span>How to use Solidworks?</span></p>
+<p><span>Teaching:<a href="https://youtu.be/gtpOX4krs4E">https://youtu.be/gtpOX4krs4E</a></span></p>
 <p></p>
-<p><span></span></p>
-<p><span style="color: #0000ff;"></span></p>
-<br />Solidworks 繪圖 << <a href='Solidworks 繪圖.html'>Previous</a> <a href='Solidworks操作流程.html'>Next</a> >> Solidworks操作流程</div>
+<br />Solidworks2021 installation configuration << <a href='Solidworks2021 installation configuration.html'>Previous</a> <a href='Solvespace drawing.html'>Next</a> >> Solvespace drawing</div>
         
     <!-- footer -->
       <div class="container">
