--- a/content/Solvespace drawing.html
+++ b/content/Solvespace drawing.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,11 +139,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景<br /><h1>Solvspace操作流程</h1>
-<p><span>How to use Solvespace?</span></p>
-<p><span>Teaching:<a href="https://youtu.be/ksTnyrjiz_c">https://youtu.be/ksTnyrjiz_c</a></span></p>
+    <div id="tipue_search_content">Solidworks operation process << <a href='Solidworks operation process.html'>Previous</a> <a href='Solvespace installation and configuration.html'>Next</a> >> Solvespace installation and configuration<br /><h1>Solvespace drawing</h1>
+<p><span style="color: #0000ff;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">origin:</span></span></span></p>
+<p><span style="color: #0000ff;"><span style="color: #000000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">A brief comment and interview with developers was published on Libre Graphics World in 2013. </span><span style="vertical-align: inherit;">And this review praised SolveSpace's </span></span><span style="color: #ff0000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">small executable file, advanced constraint solver and range of output formats</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> . </span><span style="vertical-align: inherit;">The same comment pointed out some shortcomings, mainly its </span></span><span style="color: #ff0000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">slow and limited handling of Boolean values and lack of native Linux support</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> . </span><span style="vertical-align: inherit;">However, local Linux support has since been added.</span></span></span><br/></span></p>
+<p><span style="color: #0000ff;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">introduce:</span></span></span></p>
+<p><span style="color: #000000;"><strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">-</span></span></strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> modeling of 3D parts - tensile, and Boolean rotation (and / Differential) operation to draw</span></span></span></p>
+<p><span style="color: #000000;"><br/><strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">-</span></span></strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> Modeling 2D part - the part drawn as a single part, and exported as DXF, PDF, or the SVG; Assembly verification using complex 3D</span></span></span></p>
+<p><span style="color: #000000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> Prepare CAM data-export 2D vector art for waterjet or laser cutting machine; or generate STEP or STL for importing into third parties</span></span></span></p>
+<p><span style="color: #000000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> CAM software </span></span><br/><strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">-</span></span></strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> mechanism design-use constraint solver to simulate plane or space links, including pins, balls or sliding joints </span></span><br/><strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">-</span></span></strong><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> plane and solid geometry-replace manually solved trigonometric functions and spreadsheets with real-time dimension drawings</span></span></span></p>
 <p></p>
-<br />Solvespace安裝配置 << <a href='Solvespace安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景</div>
+<br />Solidworks operation process << <a href='Solidworks operation process.html'>Previous</a> <a href='Solvespace installation and configuration.html'>Next</a> >> Solvespace installation and configuration</div>
         
     <!-- footer -->
       <div class="container">
