--- a/content/Solvespace installation and configuration.html
+++ b/content/Solvespace installation and configuration.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,16 +139,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solidworks操作流程 << <a href='Solidworks操作流程.html'>Previous</a> <a href='Solvespace安裝配置.html'>Next</a> >> Solvespace安裝配置<br /><h1>Solvespace繪圖</h1>
-<p><span style="color: #0000ff;">緣起:</span></p>
-<p><span style="color: #0000ff;"><span style="color: #000000;">2013 年在Libre Graphics World上發表了對開發人員的簡短評論和採訪。而這篇評論稱讚 SolveSpace的<span style="color: #ff0000;">可執行文件小、先進的約束求解器和輸出格式範圍</span>。同一篇評論指出了一些缺點，主要是它對<span style="color: #ff0000;">布爾值的緩慢和有限的處理以及缺乏原生 Linux 支持</span>。但是，此後增加了本地 Linux 支持。</span><br/></span></p>
-<p><span style="color: #0000ff;">介紹:</span></p>
-<p><span style="color: #000000;"><strong>-</strong>建模 3D 零件 – 使用拉伸、旋轉和布爾（並/差）操作進行繪製</span></p>
-<p><span style="color: #000000;"><br/><strong>-</strong>建模 2D 零件 – 將零件繪製為單個部分，並導出為DXF、PDF或SVG；使用 3D 裝配驗證配合</span></p>
-<p><span style="color: #000000;"> 準備CAM數據 – 為水刀機或激光切割機導出 2D 矢量藝術；或生成 STEP 或STL，用於導入第三方</span></p>
-<p><span style="color: #000000;"> CAM 軟件<br/><strong>-</strong>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節<br/><strong>-</strong>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></p>
-<p></p>
-<br />Solidworks操作流程 << <a href='Solidworks操作流程.html'>Previous</a> <a href='Solvespace安裝配置.html'>Next</a> >> Solvespace安裝配置</div>
+    <div id="tipue_search_content">Solvespace drawing << <a href='Solvespace drawing.html'>Previous</a> <a href='Solvspace operation process.html'>Next</a> >> Solvspace operation process<br /><h1>Solvespace installation and configuration</h1>
+<p>How to download Solvespace?</p>
+<p>Teaching : <a href="https://youtu.be/WA30mcUVi6w">https://youtu.be/WA30mcUVi6w</a></p>
+<h4><span><span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Solving space:</span></span></span></span></h4>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">To </span></span><a href="https://solvespace.com"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://solvespace.com</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> downloading from </span></span><a href="https://github.com/solvespace/solvespace"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/solvespace/solvespace</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> download the source code to the portable programming system used to compile</span></span></p>
+<br />Solvespace drawing << <a href='Solvespace drawing.html'>Previous</a> <a href='Solvspace operation process.html'>Next</a> >> Solvspace operation process</div>
         
     <!-- footer -->
       <div class="container">
