--- a/content/Solvspace operation process.html
+++ b/content/Solvspace operation process.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,19 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Solidworks2021 安裝配置.html'>Next</a> >> Solidworks2021 安裝配置<br /><h1>Solidworks 繪圖</h1>
-<p><span style="color: #0000ff;">緣起:</span></p>
-<p>1993年，創始人<a href="https://en.wikipedia.org/wiki/Jon_Hirschtick">Jon Hirschtick</a>招募了一組工程師團隊，其招募意旨是使3D CAD軟體更容易上手。Hirschtick從廣受好評的麻省理工學院二十一點隊的成員中籌得100萬美元，開始了他的新事業。該團隊的目標是構建一個基於<span style="color: #ff0000;">Windows平台</span>的易於使用且價格合理的軟體。這在當時真的是革命性的存在，當時所有其他流行的CAD系統都是在<span style="color: #ff0000;">Unix</span>上構建的。經過幾年的開發，最初發布的SolidWorks終於來了......</p>
-<p><span style="color: #0000ff;">介紹:</span></p>
-<p>最初代的版本1995年發行，其特色如下。</p>
-<p>1.與其他CAD系統的18,000美元相比，SolidWorks的售價僅為4,000美元。</p>
-<p><br/>2.該軟體更易於使用：與市場上其他CAD軟體相比，用戶只需3個月的使用經驗就可以輕鬆上手。</p>
-<p>  易上手的原因有很大一部分在於它採用了現代著名的Windows界面。</p>
-<p><br/>3.模型的可視化是前所未有的。在光線充足的陰影環境中的構建功能與傳統建模空間形成鮮明對比，</p>
-<p>  傳統建模空間僅顯示黑色背景下的線框。我們現在熟悉的類似FeatureManager用於顯示模型的構建歷      史。</p>
-<p>4.零件，組件和圖紙從一開始就可用。用戶無法在組件中應用配合，但仍可將組件放置到位。</p>
-<h4></h4>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Solidworks2021 安裝配置.html'>Next</a> >> Solidworks2021 安裝配置</div>
+    <div id="tipue_search_content">Solvespace installation and configuration << <a href='Solvespace installation and configuration.html'>Previous</a> <a href='Sports scene.html'>Next</a> >> Sports scene<br /><h1>Solvspace operation process</h1>
+<p><span>How to use Solvespace?</span></p>
+<p><span>Teaching:<a href="https://youtu.be/ksTnyrjiz_c">https://youtu.be/ksTnyrjiz_c</a></span></p>
+<p></p>
+<br />Solvespace installation and configuration << <a href='Solvespace installation and configuration.html'>Previous</a> <a href='Sports scene.html'>Next</a> >> Sports scene</div>
         
     <!-- footer -->
       <div class="container">
