--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -199,7 +199,7 @@ end</span></span></pre>
 <p><span style="color: #000000;"> CAM 軟件<br/><strong>-</strong>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節<br/><strong>-</strong>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></p>
 <p></p>
 <h3>Solvespace安裝配置</h3>
-<p>How to downlod Solvespace?</p>
+<p>How to download Solvespace?</p>
 <p>Teaching : <a href="https://youtu.be/WA30mcUVi6w">https://youtu.be/WA30mcUVi6w</a></p>
 <h4><span><span>求解空間：</span></span></h4>
 <p>至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用</p>
