--- a/content/Solidworks drawing.html
+++ b/content/Solidworks drawing.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,12 +139,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solvespace繪圖 << <a href='Solvespace繪圖.html'>Previous</a> <a href='Solvspace操作流程.html'>Next</a> >> Solvspace操作流程<br /><h1>Solvespace安裝配置</h1>
-<p>How to download Solvespace?</p>
-<p>Teaching : <a href="https://youtu.be/WA30mcUVi6w">https://youtu.be/WA30mcUVi6w</a></p>
-<h4><span><span>求解空間：</span></span></h4>
-<p>至 <a href="https://solvespace.com">https://solvespace.com</a> 下載或從 <a href="https://github.com/solvespace/solvespace">https://github.com/solvespace/solvespace</a> 下載原始碼, 以可攜程式系統自行編譯後使用</p>
-<br />Solvespace繪圖 << <a href='Solvespace繪圖.html'>Previous</a> <a href='Solvspace操作流程.html'>Next</a> >> Solvspace操作流程</div>
+    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Solidworks2021 installation configuration.html'>Next</a> >> Solidworks2021 installation configuration<br /><h1>Solidworks drawing</h1>
+<p><span style="color: #0000ff;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">origin:</span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">In 1993, the founder </span></span><a href="https://en.wikipedia.org/wiki/Jon_Hirschtick"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Jon Hirschtick</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> recruited a team of engineers with the intention of making 3D CAD software easier to use. </span><span style="vertical-align: inherit;">Hirschtick started his new business by raising $1 million from members of the acclaimed MIT Blackjack team. </span><span style="vertical-align: inherit;">The team's goal is to build an </span><span style="vertical-align: inherit;">easy-to-use and affordable software </span><span style="vertical-align: inherit;">based on the </span></span><span style="color: #ff0000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Windows platform</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> . </span><span style="vertical-align: inherit;">This was really revolutionary at the time, when all other popular CAD systems were built on </span></span><span style="color: #ff0000;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Unix</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> . </span><span style="vertical-align: inherit;">After several years of development, the initial release of SolidWorks is finally here...</span></span></p>
+<p><span style="color: #0000ff;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">introduce:</span></span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">The original version was released in 1995, and its features are as follows.</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">1. Compared with the US$18,000 of other CAD systems, the price of SolidWorks is only US$4,000.</span></span></p>
+<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">2. The software is easier to use: Compared with other CAD software on the market, users only need 3 months of experience to get started.</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">  A large part of the ease of use is that it uses the modern and well-known Windows interface.</span></span></p>
+<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">3. The visualization of the model is unprecedented. </span><span style="vertical-align: inherit;">The construction function in a well-lit shaded environment is in sharp contrast with the traditional modeling space.</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">  The traditional modeling space only displays the wire frame under the black background. </span><span style="vertical-align: inherit;">The similar FeatureManager that we are now familiar with is used to display the construction history of the model.</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">4. Parts, components and drawings are available from the beginning. </span><span style="vertical-align: inherit;">The user cannot apply mates in the component, but the component can still be placed in place.</span></span></p>
+<h4></h4>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Solidworks2021 installation configuration.html'>Next</a> >> Solidworks2021 installation configuration</div>
         
     <!-- footer -->
       <div class="container">
