--- a/content/Sports scene.html
+++ b/content/Sports scene.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks 繪圖.html'>Solidworks 繪圖</a><ul class='dropdown'><li><a href='Solidworks2021 安裝配置.html'>Solidworks2021 安裝配置</a><li><a href='Solidworks操作流程.html'>Solidworks操作流程</a></li></ul><li class='has-children'><a href='Solvespace繪圖.html'>Solvespace繪圖</a><ul class='dropdown'><li><a href='Solvespace安裝配置.html'>Solvespace安裝配置</a><li><a href='Solvspace操作流程.html'>Solvspace操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,17 +139,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Solvspace操作流程 << <a href='Solvspace操作流程.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度<br /><h1>運動場景</h1>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">加元1：</span></span></h4>
-<p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
-<p style="padding-left: 30px;">CAD1 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
-<p style="padding-left: 30px;">CAD1 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">加元2：</span></span></h4>
-<p style="padding-left: 30px;">CAD2 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
-<p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
-<p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
+    <div id="tipue_search_content">Solvspace operation process << <a href='Solvspace operation process.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度<br /><h1>Sports scene</h1>
+<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Kamoto 1:</span></span></span></span></h4>
+<p style="padding-left: 30px;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD1 parts are exported and transferred to CoppeliaSim operation video (Youtube)</span></span></p>
+<p style="padding-left: 30px;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD1 parts transferred to CoppeliaSim instructional video (Wink)</span></span></p>
+<p style="padding-left: 30px;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD1 transfer to Coppeliasim instructional video embedded video: The title must be `` </span></span><span style="background-color: #ffff99;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">NFU-MDE-cad2021-student ID-SW2020</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> parts are transferred to CoppeliaSim instructional video'' with </span></span><span style="background-color: #ccffcc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">voice instructions</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> and </span></span><span style="background-color: #ccffcc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">subtitles.</span></span><br/></span></p>
+<h4><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Kamoto 2:</span></span></span></span></h4>
+<p style="padding-left: 30px;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 parts are exported and transferred to CoppeliaSim operation video (Youtube)</span></span></p>
+<p style="padding-left: 30px;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 parts transferred to CoppeliaSim instructional video (Wink)</span></span></p>
+<p style="padding-left: 30px;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">CAD2 transfer to Coppeliasim instructional video embedded video: The title must be `` </span></span><span style="background-color: #ffff99;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">NFU-MDE-cad2021-student ID-SW2020</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> parts transfer to CoppeliaSim instructional video'' with </span></span><span style="background-color: #ccffcc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">voice description</span></span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> and </span></span><span style="background-color: #ccffcc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">subtitles.</span></span></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<br />Solvspace操作流程 << <a href='Solvspace操作流程.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度</div>
+<br />Solvspace operation process << <a href='Solvspace operation process.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度</div>
         
     <!-- footer -->
       <div class="container">
