--- a/content/W11.html
+++ b/content/W11.html
@@ -139,14 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Task1.html'>Next</a> >> Task1<br /><h1>about</h1>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">In this semester's computer-aided design internship, each student is required to create a personal homework warehouse and web page according to the format of this HW template.</span></span></p>
-<hr/>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40871106</span></span></span></span></span></span></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website storage: </span></span><a href="https://github.com/40871106/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/40871106/cad2021_hw</span></span></a></p>
-<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website link: </span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://40871106.github.io/cad2021_hw/content/index.html</span></span></a></p>
-<p></p>
-<br /> <a href='Task1.html'>Next</a> >> Task1</div>
+    <div id="tipue_search_content">Task1 << <a href='Task1.html'>Previous</a> <a href='W11查驗.html'>Next</a> >> W11查驗<br /><h1>W11</h1>
+<br />Task1 << <a href='Task1.html'>Previous</a> <a href='W11查驗.html'>Next</a> >> W11查驗</div>
         
     <!-- footer -->
       <div class="container">
