edit w11check words

--- a/content/W11 inspection.html
+++ b/content/W11 inspection.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 inspection.html'>W11 inspection</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W11查驗</h1>
-<p>零件下載 : <a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6?usp=sharing">連結</a></p>
+    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W11 inspection</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Parts download(SW) :  </span></span><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">link</span></span></a></p>
 <p></p>
 <p><span mce-data-marked="1">Design and draw link structure : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/6QKRgmcmLns" title="YouTube video player" width="1280"></iframe></p>
@@ -148,11 +148,10 @@ img.add_border {
 <p><span mce-data-marked="1">Assembly link : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/VzYvOpYzo7E" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1">SW轉入CoppeliaSim : </span></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">SW transfer to CoppeliaSim: </span></span></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/lUdV9gE4f3c" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1">CoppliaSim simuiate : </span></p>
-<br />W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple: </span></span></span></p><br />W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
