--- a/content/W11.html
+++ b/content/W11.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11查驗.html'>W11查驗</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
+                     <li><a href='about.html'>about</a><li><a href='Task1.html'>Task1</a><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='W11 inspection.html'>W11 inspection</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='Solidworks drawing.html'>Solidworks drawing</a><ul class='dropdown'><li><a href='Solidworks2021 installation configuration.html'>Solidworks2021 installation configuration</a><li><a href='Solidworks operation process.html'>Solidworks operation process</a></li></ul><li class='has-children'><a href='Solvespace drawing.html'>Solvespace drawing</a><ul class='dropdown'><li><a href='Solvespace installation and configuration.html'>Solvespace installation and configuration</a><li><a href='Solvspace operation process.html'>Solvspace operation process</a></li></ul><li><a href='Sports scene.html'>Sports scene</a><li><a href='進度.html'>進度</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='最終項目.html'>最終項目</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Task1 << <a href='Task1.html'>Previous</a> <a href='W11查驗.html'>Next</a> >> W11查驗<br /><h1>W11</h1>
-<br />Task1 << <a href='Task1.html'>Previous</a> <a href='W11查驗.html'>Next</a> >> W11查驗</div>
+    <div id="tipue_search_content">Task1 << <a href='Task1.html'>Previous</a> <a href='W11 inspection.html'>Next</a> >> W11 inspection<br /><h1>W11</h1>
+<br />Task1 << <a href='Task1.html'>Previous</a> <a href='W11 inspection.html'>Next</a> >> W11 inspection</div>
         
     <!-- footer -->
       <div class="container">
