upload W11check dynamic video

--- a/content/W11 inspection.html
+++ b/content/W11 inspection.html
@@ -142,17 +142,15 @@ img.add_border {
     <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>W11 inspection</h1>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Parts download(SW) :  </span></span><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">link</span></span></a></p>
 <p></p>
-<p><span mce-data-marked="1">Design and draw link structure : </span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/6QKRgmcmLns" title="YouTube video player" width="1280"></iframe></p>
+<p><span mce-data-marked="1">Design and draw link structure : </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/6QKRgmcmLns" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1">Assembly link : </span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/VzYvOpYzo7E" title="YouTube video player" width="1280"></iframe></p>
+<p><span mce-data-marked="1">Assembly link : </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/VzYvOpYzo7E" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">SW transfer to CoppeliaSim : </span></span></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/lUdV9gE4f3c" title="YouTube video player" width="1280"></iframe></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">SW transfer to CoppeliaSim : </span></span></span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/lUdV9gE4f3c" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple : </span></span></span></p>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span></p><br />W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple : </span></span></span><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/cnRl8fwj8VY" title="YouTube video player" width="1280"></iframe></span></span></span></p>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span></p>
+<br />W11 << <a href='W11.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
