--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,11 +1,11 @@
-<h1><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">about</span></span></h1>
+<h1>about</h1>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">In this semester's computer-aided design internship, each student is required to create a personal homework warehouse and web page according to the format of this HW template.</span></span></p>
 <hr/>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40871106</span></span></span></span></span></span></span></span></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website storage: </span></span><a href="https://github.com/40871106/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/40871106/cad2021_hw</span></span></a></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Website link: </span></span><a href="https://40871106.github.io/cad2021_hw/content/index.html"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://40871106.github.io/cad2021_hw/content/index.html</span></span></a></p>
 <p></p>
-<h1><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Task1</span></span></h1>
+<h1>Task1</h1>
 <div class="line number1 index0 alt2"><code class="py plain"></code></div>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">data = open("cad2021_2b_w2_list.txt").readlines() </span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
 data = data[1:] </span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
@@ -86,7 +86,7 @@ for i in range(len(data)): </span></span><span style="vertical-align: inherit;">
 <p><span><a href="https://github.com/40971220/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40971220</span></span></span></span></span></span></a> <a href="https://40971220.github.io/cad2021_hw"><span style="vertical-align: inherit;"></span></a></span></p>
 <p><span><a href="https://github.com/40971227/cad2021_hw"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">40971227</span></span></span></span></span></span></a> <a href="https://40971227.github.io/cad2021_hw"><span style="vertical-align: inherit;"></span></a></span></p>
 <h1>W11</h1>
-<h2><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">W11 inspection</span></span></h2>
+<h2>W11 inspection</h2>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Parts download(SW) :  </span></span><a href="https://drive.google.com/drive/folders/1XsPXcMXqvvtpa9kGTQq6hGUZkGBHb-P6?usp=sharing"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">link</span></span></a></p>
 <p></p>
 <p><span mce-data-marked="1">Design and draw link structure : </span></p>
@@ -99,8 +99,7 @@ for i in range(len(data)): </span></span><span style="vertical-align: inherit;">
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="720" src="https://www.youtube.com/embed/lUdV9gE4f3c" title="YouTube video player" width="1280"></iframe></p>
 <p></p>
 <p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">Simplified couple : </span></span></span></p>
-<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span></p>
-<h1><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW1</span></span></h1>
+<p><span mce-data-marked="1"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"></span></span></span></p><h1>HW1</h1>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW1 accounts for 25% of semester grades</span></span></p>
 <p><span style="background-color: #ffff99;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">HW1 must be completed before 22:00 on November 10, 2021.</span></span><br/></span></p>
 <p><a href="https://github.com/mdecourse/cad2021/discussions/5"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">The HW1 specific project results return area</span></span></a><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"> will open on </span><span style="background-color: #ff99cc;"><span style="vertical-align: inherit;">September 23</span></span><span style="vertical-align: inherit;"> , </span><span style="background-color: #ff99cc;"><span style="vertical-align: inherit;">2021, and close</span></span><span style="vertical-align: inherit;"> at </span><span style="background-color: #ff99cc;"><span style="vertical-align: inherit;">22:00</span></span><span style="vertical-align: inherit;"> on November 10, </span></span><span style="background-color: #ff99cc;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">2021.</span></span></span></p>
